# rusta

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY-EXCEPTIONS.md  SECURITY.md  SPEC.md  SUPPORT.md  cliff.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  auto-tag.yml  ci.yml  codeql.yml  fuzz.yml  pages.yml  release.yml  scorecard.yml
docs/: book.toml
docs/src/: SUMMARY.md  commands.md  development.md  installation.md  introduction.md  quick-start.md  spec.md  support.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_list_json.rs
src/: cli.rs  error.rs  io.rs  lib.rs  main.rs  paths.rs  picker.rs  provision.rs  registry.rs  runtime.rs  ssh.rs  state.rs  tart.rs  update_check.rs
src/commands/: completions.rs  create.rs  default_cmd.rs  delete.rs  docker_setup.rs  down.rs  image.rs  ip.rs  list.rs  mod.rs  set_gui.rs  source.rs  ssh_cmd.rs  ssh_copy.rs  up.rs  versions.rs
tests/: cli_basics.rs  create_delete.rs  failure_paths.rs  images.rs  interactive.rs  list_default.rs  picker_and_misc.rs  preflight.rs  sources.rs  ssh_copy_docker.rs  up_down_ip.rs  update_notifier.rs  versions.rs
tests/common/: mod.rs
