[package]
name = "rusta-cli"
version = "0.1.0"
edition = "2021"
description = "macOS arm64 CLI for creating and managing Ubuntu VMs on Tart"
license = "MIT"
repository = "https://github.com/pallewela/rusta"
homepage = "https://github.com/pallewela/rusta"
readme = "README.md"
keywords = ["tart", "vm", "macos", "ubuntu", "cli"]
categories = ["command-line-utilities", "virtualization"]
authors = ["Dumindu Perera <dumindu.perera@ifs.com>"]
exclude = [
    ".github/",
    "tests/",
    "fuzz/",
    "cliff.toml",
    "CHANGELOG.md",
]

[[bin]]
name = "rusta"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
ureq = { version = "2", features = ["json", "tls"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
